# Math-Algorithms

./: README.md
Content/: Cargo.toml  README.md
Content/math algo/: math algo.vtuneproj
Content/math algo/r004hs/sqlite-db/: dicer.db
Content/math algo/r005hs/: r005hs.vtune
Content/math algo/r005hs/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
Content/math algo/r005hs/data.0/: 48956-48200.0-29652.0.th  48956-48200.0-29652.0.th.aux  48956-48200.0.trace  emon.0.emon  emon.0.emon_events  emon.0.emon_version  systemcollector-24236-Kaizer.sc
Content/math algo/r005hs/sqlite-db/: dicer.db
Content/sample (matrix)/: sample (matrix).vtuneproj
Content/sample (matrix)/r000hs/config/: context_values.cfg  log.cfg
Content/sample (matrix)/r002ps/config/: context_values.cfg  log.cfg
Content/sample (matrix)/r002ps/sqlite-db/: dicer.db
Content/sample (matrix)/r004hs/sqlite-db/: dicer.db
Content/sample (matrix)/r005hs/: r005hs.vtune
Content/sample (matrix)/r005hs/config/: collection.cfg  context_values.cfg  log.cfg  runss.options  state.cfg
Content/sample (matrix)/r005hs/data.0/: 59108-3088.0-45324.0.th  59108-3088.0.trace  (+4 more)
Content/sample (matrix)/r006hs/: r006hs.vtune
Content/src/: lib.rs  main.rs
Content/src/discrete_logarithm/: README.md  mod.rs
Content/src/montgomery_mod_mult/: README.md  benchmark.rs  benchmark_result.txt  mod.rs  montgomery_impl.rs  montgomery_traits.rs  test.rs
Content/src/number_theory/: crt.rs  generate_primes.rs  mod.rs  phi.rs
Content/src/prime_factorization/: README.md  data.rs  mod.rs  structs.rs
(+84 files in other folders)
