[package]
name = "math_algorithms"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = "0.4"
getrandom = "0.3.2"
gmp-mpfr-sys = "1.6.5"
num-traits = "0.2.19"
once_cell = "1.21.3"
rand = "0.9.0"
rug = "1.27.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
lto = true
codegen-units = 1
debug = 2  # comment out when not needed

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
